# notte-auth

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev.env  main.py  pyproject.toml  requirements.txt
auth/application/clients/: user_client.py
auth/application/services/: __init__.py  token_generator.py  token_verifier.py
auth/application/use_cases/: __init__.py  login.py
auth/config/: __init__.py  config.py
auth/domain/clients/: __init__.py  user_client.py
auth/domain/entities/: __init__.py  payload.py
auth/infra/clients/: __init__.py  http_user_client.py
auth/infra/services/: __init__.py  jwt_token_generator.py  jwt_token_verifier.py
auth/lib/: pydantic.py
tests/domain/entities/: payload_test.py
tests/factories/: __init__.py  make_jwt_config.py  make_payload_from_token.py  make_token.py
tests/helpers/: __init__.py  mock_server.py
tests/infra/clients/: http_user_client_test.py
tests/infra/services/: jwt_token_generator_test.py  jwt_token_verifier_test.py
